--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
       Coded by <a href="https://github.com/ArdentChimera">Nikolai Petrov</a>.
     </div>
   </footer>
-  <script src="/index.js"></script> 
+  <script src="index.js"></script> 
 </body>
 </html>
