--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
-  <script src="index.js"></script> 
+  <script src="index.js" type="text/javascript"></script> 
   <title>Frontend Mentor | Interactive card details form</title>
 </head>
 <body>
