--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
@@ -54,7 +54,6 @@
   <div class="cardBack">
       <span class="cvcSpan" id="cvcSpan">000</span>
   </div>
-  <!-- Completed state start -->
   <div class="completedStateLogo" id="completedState">
     <img class="completedIcon" width="100px" src="/images/icon-complete.svg" />
     <h2>THANK YOU!</h2>
