--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <span class="cvcSpan" id="cvcSpan">000</span>
   </div>
   <div class="completedStateLogo" id="completedState">
-    <img class="completedIcon" width="100px" src="/images/icon-complete.svg" />
+    <img class="completedIcon" width="100px" src="images/icon-complete.svg" />
     <h2>THANK YOU!</h2>
     <p>We've added your card details</p>
   </div>
